# news-coverage-a24-lionsgate

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CONTINUITY.md  README.md  ROADMAP.md  pyproject.toml  tmp_checkpoint_output.json  tmp_deadline_leavy.json  tmp_deadline_leavy.md
.agent/: AGENTS.md  example_prompt.md
.agent/complete/: execplan-agent-orchestration.md  execplan-batch-process-endpoint.md  execplan-manager-agent.md  execplan-multibuyer-news-coverage-generation.md  execplan-news-agent.md  execplan-remove-duplicate-skips.md  execplan-response-id-logging.md  execplan-summarizer-retry.md
.agent/in_progress/: execplan-agent-orchestration.md  execplan-chrome-extension.md  execplan-feedly-capture-flow.md  execplan-improve-manager-agent-accuracy.md  execplan-interview-commentary-facts-and-docx.md  execplan-manager-agent.md  execplan-multi-category-and-routing.md  execplan-multi-fact-classification-storage.md  execplan-multibuyer-news-coverage-generation.md  execplan-news-agent.md  execplan-parallel-agent-runs.md  execplan-per-title-facts-and-docx-formatting.md  execplan-routing-table.md  route-slate-articles.md
data/: AGENTS.md
docs/: AGENTS.md  agents_sdk_quickref.md  sample_outputs.md
docs/templates/: coverage_schema.json  (+3 more)
src/: AGENTS.md
tests/: test_agent_runner.py  test_buyer_aliases.py  test_cli.py  test_company_inference.py  test_compare_ab_outputs.py  test_content_deals_formatter.py  test_docx_builder.py  test_ingest_skip_duplicate.py  test_schema_loader.py  test_server.py  test_workflow.py
tools/: compare_ab_outputs.py  run_manual_samples.py
(+90 files in other folders)
